[tool.poetry]
name = "blog"
version = "0.1.0"
description = "lioman.de blog"
authors = ["Elias Kirchgässner <blog@lioman.de>"]
license = "CC-BY-SA-4.0"

[tool.poetry.dependencies]
python = "^3.11"
pelican = "^4.8.0"
typogrify = "^2.0.7"
pillow = "^8.4.0"
bs4 = "^0.0.1"
markdown = "^3.4.3"
invoke = "^2.0.0"
pelican-series = "^2.1.0"
pelican-neighbors = "^1.2.0"
pelican-precompress = "^1.1.2"
zopfli = "^0.1.9"
Brotli = "^1.0.9"
pelican-search = "^1.1.0"
pelican-i18n-templates = { path = "plugins/i18n_templates" }
pelican-liquid-tags = "^1.0.4"
pelican-sitemap = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
livereload = "^2.6.3"
python-slugify = "^6.1.2"

[tool.poetry.scripts]
build = "pelican -s publishconf.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
