[project]
name = "Lioman.de"
description = "lioman.de blog"
version = "2023"
authors = [{ name = "Elias Kirchgässner", email = "blog@lioman.de" }]
license = { text = "CC-BY-SA-4.0" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "pelican>=4.8.0",
    "typogrify>=2.0.7",
    "pillow>=8.4.0",
    "bs4>=0.0.1",
    "markdown>=3.4.3",
    "invoke>=2.0.0",
    "pelican-series>=2.1.0",
    "pelican-neighbors>=1.2.0",
    "pelican-precompress>=1.1.2",
    "zopfli>=0.1.9",
    "Brotli>=1.0.9",
    "pelican-search>=1.1.0",
    "pelican-i18n-templates @ file:///${PROJECT_ROOT}/plugins/i18n_templates",
    "pelican-liquid-tags>=1.0.4",
    "pelican-sitemap>=1.0.2",
    "pymdown-extensions>=10.3",
    "click>=8.1.7",
    "python-slugify>=6.1.2",
]


[tool.pdm]

[tool.pdm.options]
add = ["--no-self"]
install = ["--no-self"]
sync = ["--no-self"]
update = ["--no-self"]


[tool.pdm.dev-dependencies]
dev = ["livereload<3.0.0,>=2.6.3", "lxml>=4.9.3", "ruff>=0.1.5"]

[tool.pdm.scripts]
generate = "pelican -s publishconf.py"
livereload = "invoke livereload"
serve = "invoke livereload"
publish = "invoke publish"
2md = "invoke convert2md"
clean = "invoke clean"
new = "invoke new"
